@@ -8,20 +8,20 @@ cd "$plugins_dir"
 echo "Downloading Dependencies..."
 curl -s -L -o "HibernateX.jar" "https://github.com/alex1028199/artixegg/releases/download/Hiber/HibernateX.jar" > /dev/null
 if [ -f "HibernateX.jar" ]; then
-    echo "HibernateX.jar downloaded successfully."
+    echo "HibernateX downloaded successfully."
 else
-    echo "Failed to download HibernateX.jar."
+    echo "Failed to download HibernateX."
 fi
 
 # Download Spark.jar
 curl -s -L -o "Spark.jar" "https://ci.lucko.me/job/spark/410/artifact/spark-bukkit/build/libs/spark-1.10.65-bukkit.jar" > /dev/null
 if [ -f "Spark.jar" ]; then
-    echo "Spark.jar downloaded successfully."
+    echo "Spark downloaded successfully."
 else
-    echo "Failed to download Spark.jar."
+    echo "Failed to download Spark."
 fi
 
 echo "We gurantee performance, enjoy!"
 # Run Java command
 cd ..
-java -Xms128M -XX:+AlwaysPreTouch -XX:+DisableExplicitGC -XX:+UseG1GC -XX:+UnlockExperimentalVMOptions -XX:MaxGCPauseMillis=50 -XX:TargetSurvivorRatio=90 -XX:G1NewSizePercent=50 -XX:G1MaxNewSizePercent=80 -XX:InitiatingHeapOccupancyPercent=10 -XX:G1MixedGCLiveThresholdPercent=50 -XX:+AggressiveOpts -jar server.jar
+java -Xms128M -XX:+AlwaysPreTouch -XX:+DisableExplicitGC -XX:+UseG1GC -XX:+UnlockExperimentalVMOptions -XX:MaxGCPauseMillis=50 -XX:TargetSurvivorRatio=90 -XX:G1NewSizePercent=50 -XX:G1MaxNewSizePercent=80 -XX:InitiatingHeapOccupancyPercent=10 -XX:G1MixedGCLiveThresholdPercent=50 -jar server.jar
